# LochNES

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  test.yml
.github/actions/docker/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: ci.yml
examples/color_test/: main.rs
examples/pacman/: main.rs
examples/snake/: main.rs
src/: cpu.rs  lib.rs  main.rs
src/bus/: ideas.md  mod.rs
src/controller/: mod.rs
src/cpu/: README.md  addressing_modes.rs  cpu.rs  instructions.rs  mappers.rs  mod.rs
src/cpu/mappers/: basic_mapper.rs  mod.rs  test_mapper.rs
src/memory/: mod.rs
src/nes/: mod.rs
src/ppu/: README.md  frame.rs  mod.rs
src/ppu/registers/: address.rs  control.rs  data.rs  mask.rs  mod.rs  oam_address.rs  status.rs  write_toggle.rs
src/rom/: mod.rs
