[package]
name = "LochNES"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"

[dev-dependencies]
test-case = "*"
json = "*"
sdl2 = "0.34.0"
rand = "=0.7.3"

[[example]]
name = "snake"