[package]
name = "vines"
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"
description = "NES emulator library"
repository = "https://github.com/lyrakisk/vines"
exclude = ["submodules"]

[dependencies]
bitflags = "2.6.0"
once_cell = "1.19.0"

[dev-dependencies]
test-case = "3.3.1"
json = "0.12.4"
sdl2 = "0.34.0"
rand = "=0.7.3"